# mosaic-autoresponder

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.kiro/specs/creator-outreach-followup/: design.md  requirements.md  sequence-flow.md  tasks-simplified.md  tasks.md
app/: main.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  debouncer.py  decision_router.py  redis_sync.py  scheduler.py
app/db/: connect.py  prisma_client.py  schema.sql
app/imap/: controller.py  parser.py  watcher.py
app/ml/: classifier.py  email_analyzer.py
app/smtp/: sender.py
app/utils/: contact_detector.py  logger.py  training_data_logger.py
prisma/: schema.prisma
